k8s/cloud/overlays/exposed_services_gclb/vzconn_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vzconn-service
  annotations:
    cloud.google.com/app-protocols: '{"tcp-http2":"HTTP2"}'
    beta.cloud.google.com/backend-config: '{"ports": {"51600":"vzconn-backend-config"}}'
    cloud.google.com/load-balancer-type: internal
spec:
  type: NodePort
  ports:
  - port: 51600
    protocol: TCP
    targetPort: 51600
    name: tcp-http2
  selector:
    name: vzconn-server
